# emtrace

./: .gersemirc  .gitignore  .mdformat.toml  AGENTS.md  README.md  emtrace.py  flake.nix  justfile  pyproject.toml  rust-toolchain.toml
c/: .clang-format  .clang-tidy  .clangd  .gersemirc  CMakeLists.txt  CMakePresets.json  conanfile.py
c/demos/: .clang-tidy  CMakeLists.txt  demo_macro.c  demo_threads.cpp
c/examples/: CMakeLists.txt  demo.c  demo.cpp  demo_macro.c  demo_readme.c  demo_socket.c  test_basic.c  test_doubles.c  test_integers.c  test_mixed.c
c/examples/include/: test_utils.h
c/include/c/: .clang-tidy
c/include/c/include/emtrace/: emtrace.h  emtrace.hpp
c/include/cxx/: .clang-tidy
c/include/emtrace/: emtrace.h
c/profiles/: .gitignore  CMakeProfilesSample.json  common.json  nix_clang.cc.json  nix_gcc.cc.json
c/scripts/: switch-profile.cmake
c/test/: CMakeLists.txt  test.c  test_basic.c  test_doubles.c  test_edge_cases.c  test_integers.c  test_large_numbers.c  test_macro.c  test_mixed.c  test_socket.c  test_strings.c
c/test/include/: test_utils.h
c/test/include/emtrace/: test_framework.h  test_suites.h  test_utils.h
c/test/src/: test_all.c  test_doubles.c  test_integers.c  test_mixed.c  test_strings.c
parser/: emtrace.py  pyproject.toml
parser/emtrace/: __init__.py  cli.py  emtrace.py
rust/: Cargo.toml  README.md
rust/benches/: basic.rs
rust/examples/: demo_error_handling.rs  demo_no_std.rs  demo_readme.rs  demo_stdout.rs  test_basic.rs  test_bool.rs  test_doubles.rs  test_edge_cases.rs  test_f32.rs  test_integers.rs  test_large_numbers.rs  test_mixed.rs  test_strings.rs  test_threads.rs  test_vec.rs
rust/src/: lib.rs
tests/: test_emtrace.py
