[project]
name = "emtrace"
version = "0.1.0"
description = "A tool to parse and format emtrace data."
dependencies = [
    "pyelftools>=0.31",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-xdist>=3.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportAny = false
reportExplicitAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false