[project]
name = "emtrace"
version = "0.1.3"
description = "A tool to parse and format emtrace data."
readme = "README.md"
authors = [{name = "Jonas Beyer", email = "reyeb.sanoj@googlemail.com"}]
license = {file="LICENSE"}
keywords = ["embedded", "logging", "tracing"]
dependencies = [
    "pyelftools>=0.31",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-xdist>=3.6.1",
]

[project.scripts]
emtrace = "emtrace.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["emtrace/*.py"]

[tool.pyright]
reportAny = false
reportExplicitAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
